opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_step_testbench"
bug-reports: "https://github.com/janestreet/hardcaml_step_testbench/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_step_testbench.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_step_testbench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "base"
  "expect_test_helpers_core"
  "hardcaml"
  "ppx_jane"
  "dune"                     {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Testbench Monad"
description: "
A monad for interacting with Hardcaml.Cyclesim based simulations.

Allows multiple control threads to interact with a simulation module, all of which are
synchronised to the system clock.
"
