(library
 (name hardcaml_step_testbench_test)
 (libraries core digital_components hardcaml_event_driven_sim.kernel
   expect_test_helpers_core hardcaml hardcaml_event_driven_sim
   hardcaml_step_testbench hardcaml_step_testbench_effectful
   hardcaml_waveterm sexp_pretty stdio)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
